# pluto

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cubes.wasm  friendfinder.wat  help  multi.wat  mywasm.wat
appbroker/: Cargo.toml
appbroker/src/: lib.rs
appmanager/: Cargo.toml
appmanager/src/: lib.rs
avtest/: .notes.swp  avscrap1.cpp  avscrap1.h  avtest.h  avtest.m  avtestbind.rs  make
main/: Cargo.toml
main/src/: broker.rs  camera.rs  display.rs  face.rs  kernel.rs  main.rs  tensor.rs  wasm.rs
pluto_apps/cubes/: Cargo.toml
pluto_apps/cubes/src/: lib.rs
pluto_apps/friendfinder/: README.md
src/: av.rs  broker.rs  camera.rs  cocoawindow.rs  display.rs  display2.rs  display3.rs  kernel.rs  main.rs  tensor.rs  wasm.rs
