[package]
name = "pluto"
version = "0.1.0"
authors = ["anselm"]
edition = "2018"

[dependencies]
rand = "0.8.3"
crossbeam = "0.8.0"
wasmtime = "0.25.0"

# appbroker = { path = "../appbroker" }

# bitflags = "1.2.0"
# libc = "0.2.90"
# objc = "0.2.7"
# cocoa = "0.24.0"
# core-foundation = "0.9.1"
# core-graphics = "0.22.2"
# image-capture-core = "0.1.5"
# avfoundation = "0.1.0"
# winit = "0.24.0"
# tensorflow-sys = "0.19.1"
# tensorflow = "0.16.1"
# three = "0.4.0"
# nalgebra = "0.25.3"
# kiss3d = "0.30.0"

# piston = "*"
# piston_window = "*"
# piston2d-graphics = "*"
# pistoncore-glutin_window = "*"
# piston2d-opengl_graphics = "*"
# piston2d-touch_visualizer = "*"

# conrod_core = "*"
# conrod_piston = "*"
# conrod_example_shared = "*"
# find_folder = "*"

[dependencies.makepad-render]
path="../render"

[dependencies.makepad-widget]
path="../widget"
